Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-28669

Undefined behaviour in couchstore: nullptr when calculating fatbuf offset

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 5.5.0
    • None
    • storage-engine
    • Untriaged
    • Unknown

    Description

      Issue identified by UBSan:

      couch_db.cc:1343:56: runtime error: member access within null pointer of type 'fatbuf' (aka '_fat_buffer')
          #0 0x1027ed23b in couchstore_free_local_document couch_db.cc:1343
      

      Technically dereferencing a nullptr is undefined.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            drigby Dave Rigby (Inactive)
            drigby Dave Rigby (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty