MB-28669: UBSan: avoid nullptr when calculating fatbuf offset

Issue identified by UBSan:

couch_db.cc:1343:56: runtime error: member access within null pointer of type 'fatbuf' (aka '_fat_buffer')
    #0 0x1027ed23b in couchstore_free_local_document couch_db.cc:1343

/Technically/ dereferencing a nullptr is undefined. Replace with
 offsetof() which is expicitly designed to solve this problem.

Change-Id: I74c0a31490bd25ea4b12d4cb6207bb8470ef755c
Reviewed-on: http://review.couchbase.org/90992
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Tim Bradgate <tim.bradgate@couchbase.com>